--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "typescript": "^3.0.1"
   }
 }
