--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
-  "dependencies": {
-    "tslint": "^5.11.0"
-  }
+  "dependencies": {}
 }
