--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "jest": "^23.5.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
