Set jest as npm test script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
