--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "discord.js": "^11.4.0"
+  }
 }
