--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
+    "@types/node": "^10.5.8",
     "jest": "^23.5.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
