--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "main": "./dist/index.js",
   "scripts": {
+    "build": "tsc -p .",
+    "start": "npm run build -- -w",
     "test": "jest"
   },
   "devDependencies": {
