--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "discord.js": "^11.4.0"
+    "@types/lodash": "^4.14.116",
+    "discord.js": "^11.4.0",
+    "lodash": "^4.17.10"
   }
 }
