--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "email": "ribbanya@gmail.com",
     "url": "https://github.com/ribbanya"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/main.js",
   "scripts": {
     "build": "tsc -p .",
     "start": "npm run build -- -w",
