--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
     "jest": "^23.5.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
